# datahomework2

./: .gitignore  README.md  create_tables.py  execute_queries.py  pyproject.toml  seed.py
tests/: test_queries.py  test_seed.py
