[tool.poetry]
name = "python-data-hw2"
version = "0.1.0"
description = ""
authors = ["Andriy <AndriySydor91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^33.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
